--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "urlsafe-base64": "^1.0.0"
   }
 }
