--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "serve-favicon": "~2.4.5",
+    "sqlstring": "^2.3.0",
     "urlsafe-base64": "^1.0.0"
   }
 }
