--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",  
+    "webpack": "webpack -w"
   },
   "dependencies": {
     "async": "^2.6.0",
@@ -18,5 +19,14 @@
     "serve-favicon": "~2.4.5",
     "sqlstring": "^2.3.0",
     "urlsafe-base64": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^3.10.0"
   }
 }
