--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",  
+    "start": "node ./bin/www",
     "webpack": "webpack -w"
   },
   "dependencies": {
@@ -16,6 +16,9 @@
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.4.5",
     "sqlstring": "^2.3.0",
     "urlsafe-base64": "^1.0.0"
