--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.4.5",
     "sqlstring": "^2.3.0",
     "urlsafe-base64": "^1.0.0"
@@ -30,6 +27,10 @@
     "babel-preset-react": "^6.24.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.10.0"
   }
 }
