--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "urlsafe-base64": "^1.0.0"
   },
   "devDependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
